# backend/src/main/java/com/gymbuddy/adapter/inbound/controller/dto/UserDTO.java
@@ -25,6 +25,4 @@ public class UserDTO {
   private String email;
   private LocalDateTime createdAt;
   private LocalDateTime updatedAt;
-  @Builder.Default
-  private List<WorkoutDTO> workouts = new ArrayList<>();
 }
